@@ -1,3 +1,8 @@
+2002-06-20  Jeff Freedman  <jsf@usf-cf-x86-linux-1>
+
+	* gamewin.h (public): get_info(), etc. moved to ShapeID.
+	* gamewin.h:  Hit pixel, etc. replaced by an array.
+
 2002-06-19  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* shapeid.h (public),etc: New 'Shape_manager' class takes over the
